log
Thu 07 Sep 2023 07:37:21 PM UTC: 
 hashmap.c | 88 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-----
 1 file changed, 81 insertions(+), 7 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:80:10: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   80 |   return NULL;
      |          ^~~~
hashmap.c:75:6: note: declared here
   75 | void insertMap(HashMap * map, char * key, void * value) {
      |      ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
0d962d7
Thu 07 Sep 2023 07:37:55 PM UTC: 
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:80:10: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   80 |   return NULL;
      |          ^~~~
hashmap.c:75:6: note: declared here
   75 | void insertMap(HashMap * map, char * key, void * value) {
      |      ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
13ba5b5
Thu 07 Sep 2023 07:40:53 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:76:23: error: expected expression before ‘char’
   76 |   int posicion = hash(char *key, newMap -> long capacity);
      |                       ^~~~
hashmap.c:76:18: error: too few arguments to function ‘hash’
   76 |   int posicion = hash(char *key, newMap -> long capacity);
      |                  ^~~~
In file included from test.c:4:
hashmap.c:26:6: note: declared here
   26 | long hash( char * key, long capacity) {
      |      ^~~~
In file included from test.c:4:
hashmap.c:80:10: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   80 |   return NULL;
      |          ^~~~
hashmap.c:75:6: note: declared here
   75 | void insertMap(HashMap * map, char * key, void * value) {
      |      ^~~~~~~~~
hashmap.c:76:7: error: unused variable ‘posicion’ [-Werror=unused-variable]
   76 |   int posicion = hash(char *key, newMap -> long capacity);
      |       ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
b6beb41
Thu 07 Sep 2023 07:41:14 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:76:18: error: expected expression before ‘long’
   76 |   int posicion = long hash(char *key, newMap -> long capacity);
      |                  ^~~~
hashmap.c:80:10: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   80 |   return NULL;
      |          ^~~~
hashmap.c:75:6: note: declared here
   75 | void insertMap(HashMap * map, char * key, void * value) {
      |      ^~~~~~~~~
hashmap.c:76:7: error: unused variable ‘posicion’ [-Werror=unused-variable]
   76 |   int posicion = long hash(char *key, newMap -> long capacity);
      |       ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
b82a147
Thu 07 Sep 2023 07:41:37 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:76:18: error: expected expression before ‘return’
   76 |   int posicion = return long hash(char *key, newMap -> long capacity);
      |                  ^~~~~~
hashmap.c:80:10: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   80 |   return NULL;
      |          ^~~~
hashmap.c:75:6: note: declared here
   75 | void insertMap(HashMap * map, char * key, void * value) {
      |      ^~~~~~~~~
hashmap.c:76:7: error: unused variable ‘posicion’ [-Werror=unused-variable]
   76 |   int posicion = return long hash(char *key, newMap -> long capacity);
      |       ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
660cf9a
Thu 07 Sep 2023 07:44:52 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:77:24: error: expected expression before ‘char’
   77 |   int posicion =  hash(char *key, newMap -> long capacity);
      |                        ^~~~
hashmap.c:77:19: error: too few arguments to function ‘hash’
   77 |   int posicion =  hash(char *key, newMap -> long capacity);
      |                   ^~~~
In file included from test.c:4:
hashmap.c:26:6: note: declared here
   26 | long hash( char * key, long capacity) {
      |      ^~~~
In file included from test.c:4:
hashmap.c:80:10: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   80 |   return NULL;
      |          ^~~~
hashmap.c:75:6: note: declared here
   75 | void insertMap(HashMap * map, char * key, void * value) {
      |      ^~~~~~~~~
hashmap.c:77:7: error: unused variable ‘posicion’ [-Werror=unused-variable]
   77 |   int posicion =  hash(char *key, newMap -> long capacity);
      |       ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
4dcd8cf
Thu 07 Sep 2023 09:28:13 PM UTC: 
 hashmap.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:77:8: error: unused variable ‘posicion’ [-Werror=unused-variable]
   77 |   long posicion = hash(key,  map -> capacity);
      |        ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
3b5174f
